--- a/ChildHDT.API/ChildHDT.API.csproj
+++ b/ChildHDT.API/ChildHDT.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Application Services\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
