--- a/ChildHDT.Infrastructure/ChildHDT.Infrastructure.csproj
+++ b/ChildHDT.Infrastructure/ChildHDT.Infrastructure.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChildHDT.Domain\ChildHDT.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="EventSourcing\" />
+    <Folder Include="InfrastructureServices\" />
+  </ItemGroup>
 
 </Project>
