Help message implemented

--- a/ChildHDT.API/ChildHDT.API.csproj
+++ b/ChildHDT.API/ChildHDT.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Application Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChildHDT.Infrastructure\ChildHDT.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
