--- a/ChildHDT.Infrastructure/ChildHDT.Infrastructure.csproj
+++ b/ChildHDT.Infrastructure/ChildHDT.Infrastructure.csproj
@@ -15,7 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentNHibernate" Version="3.3.0" />
     <PackageReference Include="MQTTnet" Version="4.3.4.1084" />
+    <PackageReference Include="NHibernate" Version="5.5.1" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
