--- a/ChildHDT.InfrastructureTests/ChildHDT.Testing.csproj
+++ b/ChildHDT.InfrastructureTests/ChildHDT.Testing.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChildHDT.API\ChildHDT.API.csproj" />
     <ProjectReference Include="..\ChildHDT.Infrastructure\ChildHDT.Infrastructure.csproj" />
   </ItemGroup>
 
