--- a/ChildHDT.API/appsettings.json
+++ b/ChildHDT.API/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost; Database=mydatabase; Username=myuser; Password=mypassword"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost"
+  },
+  "EMQX": {
+    "ClientId": "ChildClient",
+    "Host": "192.168.0.102",
+    "Port": 1883,
+    "Username": "admin",
+    "Password": "public"
+  }
 }
