--- a/ChildHDT.Infrastructure/ChildHDT.Infrastructure.csproj
+++ b/ChildHDT.Infrastructure/ChildHDT.Infrastructure.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="MQTTnet" Version="4.3.4.1084" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.29" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
 </Project>
