--- a/ChildHDT.Infrastructure/appsettings.json
+++ b/ChildHDT.Infrastructure/appsettings.json
@@ -1,12 +1,19 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "RabbitMQSettings": {
-    "Hostname":  "localhost"
+    "Hostname": "localhost"
   },
   "MQTTSettings": {
     "Server": "172.19.168.212",
     "Port": "1883",
     "Username": "admin",
-    "Passwod":  "public"
+    "Passwod": "public"
   },
   "PostgreSQLSettings": {
     "ConnectionString": "Host=localhost; Database=mydatabase; Username=myuser; Password=mypassword"
