UIT is working (now it does)

--- a/ChildHDT.UIT.Testing/ChildHDT.UIT.Testing.csproj
+++ b/ChildHDT.UIT.Testing/ChildHDT.UIT.Testing.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChildHDT.API\ChildHDT.API.csproj" />
     <ProjectReference Include="..\ChildHDT.Infrastructure\ChildHDT.Infrastructure.csproj" />
   </ItemGroup>
 
