--- a/ChildHDT.InfrastructureTests/ChildHDT.Testing.csproj
+++ b/ChildHDT.InfrastructureTests/ChildHDT.Testing.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.31" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="MQTTnet" Version="4.3.4.1084" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
