--- a/ChildHDT.API/docker-compose.yml
+++ b/ChildHDT.API/docker-compose.yml
@@ -43,7 +43,12 @@ services:
     ports:
       - "18083:18083"
       - "8083:8083"
-      - "1883:1883"
+  
+  api-flask:
+    image: api-flask
+    restart: always
+    ports:
+      - "8081:5000"
 
 volumes:
   rabbitmq_data:
