--- a/ChildHDT.API/Properties/launchSettings.json
+++ b/ChildHDT.API/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ChildHDT.API": {
+    "ChildHDT.API (Development)": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -16,6 +16,23 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7221;http://localhost:5037"
+    },
+    "ChildHDT.API (Production)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ConnectionStrings__PostgreSQL": "Host=161.67.133.210; Database=mydatabase; Username=myuser; Password=mypassword",
+        "RabbitMQ__HostName": "161.67.133.210",
+        "MQTT__Server": "161.67.133.210",
+        "MQTT__Port": "1883",
+        "MQTT__UserName": "admin",
+        "MQTT__Password": "public",
+        "API__URL": "http://161.67.133.210:8081/stresslevel"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://161.67.133.210:8085;http://161.67.133.210:5037"
     },
     "IIS Express": {
       "commandName": "IISExpress",
