--- a/ChildHDT.API/Properties/launchSettings.json
+++ b/ChildHDT.API/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "ChildHDT.API (Development)": {
+    "Development": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -17,7 +17,7 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7221;http://localhost:5037"
     },
-    "ChildHDT.API (Production)": {
+    "Production": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
