--- a/ChildHDT.API/Properties/launchSettings.json
+++ b/ChildHDT.API/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production",
         "ConnectionStrings__PostgreSQL": "Host=161.67.133.210; Database=mydatabase; Username=myuser; Password=mypassword",
-        "RabbitMQ__HostName": "161.67.133.210",
+        "RabbitMQ__HostName": "localhost",
         "MQTT__Server": "161.67.133.210",
         "MQTT__Port": "1883",
         "MQTT__UserName": "admin",
