--- a/ChildHDT.API/Properties/launchSettings.json
+++ b/ChildHDT.API/Properties/launchSettings.json
@@ -24,8 +24,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production",
         "ConnectionStrings__PostgreSQL": "Host=161.67.133.210; Database=mydatabase; Username=myuser; Password=mypassword",
-        "RabbitMQ__HostName": "https://localhost",
-        "MQTT__Server": "127.0.0.1",
+        "RabbitMQ__HostName": "localhost",
+        "MQTT__Server": "https://127.0.0.1",
         "MQTT__Port": "1883",
         "MQTT__UserName": "admin",
         "MQTT__Password": "public",
