--- a/ChildHDT.API/Properties/launchSettings.json
+++ b/ChildHDT.API/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production",
         "ConnectionStrings__PostgreSQL": "Host=161.67.133.210; Database=mydatabase; Username=myuser; Password=mypassword",
-        "RabbitMQ__HostName": "127.0.0.1",
+        "RabbitMQ__HostName": "localhost",
         "MQTT__Server": "127.0.0.1",
         "MQTT__Port": "1883",
         "MQTT__UserName": "admin",
@@ -34,7 +34,7 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://161.67.133.210:8055;http://161.67.133.210:5037"
     },
-    "IIS Express": {
+    "IIS Express": 
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
